--- a/syncmotornote.ipynb
+++ b/syncmotornote.ipynb
@@ -5,32 +5,47 @@
    "id": "db24c850",
    "metadata": {},
    "source": [
-    "# Synchronous Machine\n",
-    "Synchronous motors (SMs) are AC motors with constant speed.A SM dataset is obtained from a real experimental set. The task is to create the strong models to estimate the excitation current of SM. Source: Ramazan BAYINDIR (bayindir '@' gazi.edu.tr);Hamdi Tolga KAHRAMAN (holgakahraman '@' ktu.edu.tr); Data Set Information: Synchronous machine data were obtained in real time from the experimental operating environment. Attribute Information: Iy (Load Current) PF (Power factor) e (Power factor error) dIf (Changing of excitation current of synchronous machine) If (Excitation current of synchronous machine) Relevant Papers: Kahraman, H. T. (2014). Metaheuristic linear modeling technique for estimating the excitation current of a synchronous motor.Â Turkish Journal of Electrical Engineering & Computer Sciences,Â 22(6), 1637-1652. Kahraman, H. T., Bayindir, R, & Sagiroglu, S. (2012). A new approach to predict the excitation current and parameter weightings of synchronous machines based on genetic algorithm-based k-NN estimator.Â Energy Conversion and Management,Â 64, 129-138."
+    "# Introduction and Sources\n",
+    "Synchronous motors (SMs) are AC motors with constant speed.A SM dataset is obtained from a real experimental set. The task is to create the strong models to estimate the excitation current of SM. Source: Ramazan BAYINDIR (bayindir '@' gazi.edu.tr);Hamdi Tolga KAHRAMAN (holgakahraman '@' ktu.edu.tr); Data Set Information: Synchronous machine data were obtained in real time from the experimental operating environment. Attribute Information: Iy (Load Current) PF (Power factor) e (Power factor error) dIf (Changing of excitation current of synchronous machine) If (Excitation current of synchronous machine) Relevant Papers: Kahraman, H. T. (2014). Metaheuristic linear modeling technique for estimating the excitation current of a synchronous motor.Â Turkish Journal of Electrical Engineering & Computer Sciences,Â 22(6), 1637-1652. Kahraman, H. T., Bayindir, R, & Sagiroglu, S. (2012). A new approach to predict the excitation current and parameter weightings of synchronous machines based on genetic algorithm-based k-NN estimator.Â Energy Conversion and Management,Â 64, 129-138.\n",
+    "\n",
+    "The excitation current is a significant parameter of the synchronous machine, and it is of immense importance to continuously monitor possible value changes to ensure the smooth and high-quality operation of the synchronous machine itself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "285f3540",
+   "metadata": {},
+   "source": [
+    "# Estimation of Excitation Current with Machine Learning\n",
+    "The use of historical data to model the behaviour of synchronous motors used in some high risk areas makes monitoring of the unit extremely difficult. This may be as a result of the remoteness of the environment where the motor is installed or inability to use physical sensors to continuously examine the excitation current. ML/AI comes to rescue where the synchronous machine system is modeled with data, generating ML model and digital twin, which could be used effectively in predictive maintenance. In this paper, we will used Python and some other ML libraries and frameworks for determining the right model for prediction. First import all the libraries we will be using."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "48558291",
+   "id": "3b32c823",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in ./.venv/lib/python3.10/site-packages (1.24.3)\r\n"
+     "ename": "ImportError",
+     "evalue": "\n\nIMPORTANT: PLEASE READ THIS FOR ADVICE ON HOW TO SOLVE THIS ISSUE!\n\nImporting the numpy C-extensions failed. This error can happen for\nmany reasons, often due to issues with your setup or how NumPy was\ninstalled.\n\nWe have compiled some common reasons and troubleshooting tips at:\n\n    https://numpy.org/devdocs/user/troubleshooting-importerror.html\n\nPlease note and check the following:\n\n  * The Python version is: Python3.10 from \"/Users/admin/anaconda3/bin/python\"\n  * The NumPy version is: \"1.23.5\"\n\nand make sure that they are the versions you expect.\nPlease carefully study the documentation linked above for further help.\n\nOriginal error was: dlopen(/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/_multiarray_umath.cpython-310-darwin.so, 0x0002): Library not loaded: '@rpath/libopenblas.0.dylib'\n  Referenced from: '/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/_multiarray_umath.cpython-310-darwin.so'\n  Reason: tried: '/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/../../../../libopenblas.0.dylib' (no such file), '/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/../../../../libopenblas.0.dylib' (no such file), '/Users/admin/anaconda3/bin/../lib/libopenblas.0.dylib' (no such file), '/Users/admin/anaconda3/bin/../lib/libopenblas.0.dylib' (no such file), '/usr/local/lib/libopenblas.0.dylib' (no such file), '/usr/lib/libopenblas.0.dylib' (no such file)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/numpy/core/__init__.py:23\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 23\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m multiarray\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exc:\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/numpy/core/multiarray.py:10\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfunctools\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m overrides\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _multiarray_umath\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/numpy/core/overrides.py:6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_multiarray_umath\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      7\u001b[0m     add_docstring, implement_array_function, _get_implementing_args)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompat\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_inspect\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m getargspec\n",
+      "\u001b[0;31mImportError\u001b[0m: dlopen(/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/_multiarray_umath.cpython-310-darwin.so, 0x0002): Library not loaded: '@rpath/libopenblas.0.dylib'\n  Referenced from: '/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/_multiarray_umath.cpython-310-darwin.so'\n  Reason: tried: '/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/../../../../libopenblas.0.dylib' (no such file), '/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/../../../../libopenblas.0.dylib' (no such file), '/Users/admin/anaconda3/bin/../lib/libopenblas.0.dylib' (no such file), '/Users/admin/anaconda3/bin/../lib/libopenblas.0.dylib' (no such file), '/usr/local/lib/libopenblas.0.dylib' (no such file), '/usr/lib/libopenblas.0.dylib' (no such file)",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load libraries\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#!pip3 install scikit-learn\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m \u001b[38;5;66;03m# linear algebra\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m \u001b[38;5;66;03m# data processing, CSV file I/O (e.g. pd.read_csv)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/numpy/__init__.py:140\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[38;5;66;03m# Allow distributors to run custom init code\u001b[39;00m\n\u001b[1;32m    138\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _distributor_init\n\u001b[0;32m--> 140\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m core\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m    142\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m compat\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/numpy/core/__init__.py:49\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m     26\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     27\u001b[0m \n\u001b[1;32m     28\u001b[0m \u001b[38;5;124mIMPORTANT: PLEASE READ THIS FOR ADVICE ON HOW TO SOLVE THIS ISSUE!\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m \u001b[38;5;241m%\u001b[39m (sys\u001b[38;5;241m.\u001b[39mversion_info[\u001b[38;5;241m0\u001b[39m], sys\u001b[38;5;241m.\u001b[39mversion_info[\u001b[38;5;241m1\u001b[39m], sys\u001b[38;5;241m.\u001b[39mexecutable,\n\u001b[1;32m     48\u001b[0m         __version__, exc)\n\u001b[0;32m---> 49\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     51\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m envkey \u001b[38;5;129;01min\u001b[39;00m env_added:\n",
+      "\u001b[0;31mImportError\u001b[0m: \n\nIMPORTANT: PLEASE READ THIS FOR ADVICE ON HOW TO SOLVE THIS ISSUE!\n\nImporting the numpy C-extensions failed. This error can happen for\nmany reasons, often due to issues with your setup or how NumPy was\ninstalled.\n\nWe have compiled some common reasons and troubleshooting tips at:\n\n    https://numpy.org/devdocs/user/troubleshooting-importerror.html\n\nPlease note and check the following:\n\n  * The Python version is: Python3.10 from \"/Users/admin/anaconda3/bin/python\"\n  * The NumPy version is: \"1.23.5\"\n\nand make sure that they are the versions you expect.\nPlease carefully study the documentation linked above for further help.\n\nOriginal error was: dlopen(/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/_multiarray_umath.cpython-310-darwin.so, 0x0002): Library not loaded: '@rpath/libopenblas.0.dylib'\n  Referenced from: '/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/_multiarray_umath.cpython-310-darwin.so'\n  Reason: tried: '/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/../../../../libopenblas.0.dylib' (no such file), '/Users/admin/anaconda3/lib/python3.10/site-packages/numpy/core/../../../../libopenblas.0.dylib' (no such file), '/Users/admin/anaconda3/bin/../lib/libopenblas.0.dylib' (no such file), '/Users/admin/anaconda3/bin/../lib/libopenblas.0.dylib' (no such file), '/usr/local/lib/libopenblas.0.dylib' (no such file), '/usr/lib/libopenblas.0.dylib' (no such file)\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3b32c823",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Load libraries\n",
     "#!pip3 install scikit-learn\n",
@@ -73,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "4d31f85d",
    "metadata": {},
    "outputs": [],
@@ -84,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4a32ece2",
    "metadata": {},
    "outputs": [
@@ -183,7 +198,7 @@
        "4  3  0,74  0,26  0,317  1,497"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,8 +210,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd645085",
+   "metadata": {},
+   "source": [
+    "The table shows that the data needs to cleaned, and its data type change from string to foating point numbers. The first four columns are the independent variables while the last one is the dependent feature (excitation current). Using the function below, the data is cleaned and type converted accordingly."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1d1c4e65",
    "metadata": {},
    "outputs": [
@@ -230,8 +253,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1286da42",
+   "metadata": {},
+   "source": [
+    "There is need to conduct an Exploratory Data Analysis (EDA) to determine if there are missing data samples, outliers, strong or weak correction between independent variables. In this regards, lets elaborate more on EDA.\n",
+    "Exploratory Data Analysis (EDA) is an approach used in data science and statistics to analyze and summarize the main characteristics of a dataset. It involves a series of techniques and visualizations to gain insights, understand the underlying patterns, and identify any relationships or anomalies present in the data.\n",
+    "\n",
+    "The primary goals of EDA are:\n",
+    "\n",
+    "1. Understand the data: EDA helps you become familiar with the dataset, its variables, and their properties. It involves examining the data structure, data types, and basic statistics such as mean, median, and standard deviation.\n",
+    "\n",
+    "2. Identify patterns and relationships: EDA allows you to uncover patterns, trends, and relationships between variables. This can be done through visualizations like scatter plots, line plots, histograms, and box plots. Exploring correlations between variables can provide insights into how they interact with each other.\n",
+    "\n",
+    "3. Detect anomalies and outliers: EDA helps identify any unusual observations or outliers in the dataset. Outliers are data points that deviate significantly from the majority of the data and may require further investigation. Detecting anomalies is crucial for understanding data quality issues or potential errors.\n",
+    "\n",
+    "4. Formulate hypotheses and refine questions: EDA can inspire further research questions or hypotheses. By exploring the data, you may notice interesting patterns or unexpected findings that lead to new avenues of investigation.\n",
+    "\n",
+    "5. Assess data assumptions: EDA allows you to examine assumptions about the data, such as normality, independence, or homoscedasticity. Violations of these assumptions can affect the validity of subsequent analyses and may require additional preprocessing or modeling steps.\n",
+    "\n",
+    "Common techniques used in EDA include:\n",
+    "\n",
+    "- Summary statistics: Computing basic statistics such as mean, median, mode, standard deviation, and range.\n",
+    "- Data visualization: Creating charts and plots to visualize the distribution, relationships, and patterns in the data.\n",
+    "- Histograms: Graphical representation of the distribution of a continuous variable.\n",
+    "- Box plots: Visualizing the distribution, median, and outliers of a variable.\n",
+    "- Scatter plots: Displaying the relationship between two continuous variables.\n",
+    "- Correlation analysis: Assessing the strength and direction of the relationship between variables.\n",
+    "- Heatmaps: Representing the correlation matrix of multiple variables.\n",
+    "- Dimensionality reduction: Techniques like Principal Component Analysis (PCA) or t-SNE to visualize high-dimensional data.\n",
+    "\n",
+    "Overall, EDA provides an initial understanding of the dataset and serves as a crucial step in the data analysis process before applying more advanced techniques or building predictive models."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "id": "fcd0804f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdata\u001b[49m\u001b[38;5;241m.\u001b[39mdescribe()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b91714d7",
    "metadata": {},
    "outputs": [
@@ -270,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4777ea4e",
    "metadata": {},
    "outputs": [
@@ -325,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "62c43f10",
    "metadata": {},
    "outputs": [],
@@ -351,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "82526818",
    "metadata": {},
    "outputs": [
@@ -490,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "f82de9ff",
    "metadata": {},
    "outputs": [
@@ -570,7 +649,7 @@
        "4      4  3.908770e-32       1.0  LinearRegression(n_jobs=-1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,9 +661,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python3"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -596,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
